force-app/main/default/objects/parte_evento_financeiro__c/parte_evento_financeiro__c.object-meta.xml
<CustomObject>
    <description>Obeto destinado á fazer relação N - N entre 
Cobranca__c e Evento_financeiro__c</description>
    <label>Parte Evento Financeiro</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Nome de Parte Evento financeiro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partes Eventos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>