force-app/main/default/objects/parte_evento_financeiro__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partes Eventos</relationshipLabel>
    <relationshipName>Partes_Eventos</relationshipName>
    <type>Lookup</type>
</CustomField>