force-app/main/default/objects/parte_evento_financeiro__c/fields/Conta_a_receber__c.field-meta.xml
<CustomField>
    <fullName>Conta_a_receber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta a receber</label>
    <referenceTo>Cobranca__c</referenceTo>
    <relationshipLabel>Partes Eventos</relationshipLabel>
    <relationshipName>Partes_Eventos</relationshipName>
    <type>Lookup</type>
</CustomField>