force-app/main/default/objects/parte_evento_financeiro__c/fields/Evento_Financeiro__c.field-meta.xml
<CustomField>
    <fullName>Evento_Financeiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento Financeiro</label>
    <referenceTo>Evento_financeiro__c</referenceTo>
    <relationshipLabel>Partes Eventos</relationshipLabel>
    <relationshipName>Partes_Eventos</relationshipName>
    <type>Lookup</type>
</CustomField>